Fixed spacing in nav-elems

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ div.nav {
 }
 div.nav li {
 	display: inline-block;
-	padding: 0 2em;
+	margin: 0 2em;
 	font-size: 1.3em;
 	vertical-align: middle;
 }
@@ -109,6 +109,7 @@ div.nav li a {
 	text-decoration: none;
 	padding: .3em;
 	color: #000;
+	vertical-align: middle;
 }
 div.nav li a:hover {
 	color: #d71255;
